--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Interim changes since NDN-CPP v0.17 (2019-11-18)
+------------------------------------------------
+
+Changes
+* Renamed NDN-CPP to NDN-IND. Renamed include paths to <ndn-ind/...>. Renamed the
+  libraries to libndn-ind.a, etc.
+* Added ndn::util::Scheduler and time utilities in ndn::time .
+* In Interest, changed the MustBeFresh default value to false.
+
 NDN-CPP v0.17 (2019-10-04)
 --------------------------
 
