CHANGELOG: Also check for a Unix socket at /var/tmp/nfd.sock

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Interim changes since NDN-CPP v0.17 (2019-11-18)
+Interim changes since NDN-CPP v0.17 (2019-11-22)
 ------------------------------------------------
 
 Changes
@@ -6,6 +6,7 @@ Changes
   libraries to libndn-ind.a, etc.
 * Added ndn::util::Scheduler and time utilities in ndn::time .
 * In Interest, changed the MustBeFresh default value to false.
+* In Face, also check for a Unix socket at /var/tmp/nfd.sock .
 
 NDN-CPP v0.17 (2019-10-04)
 --------------------------
