--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Interim changes since NDN-CPP v0.17 (2019-11-22)
+Interim changes since NDN-CPP v0.17 (2019-12-17)
 ------------------------------------------------
 
 Changes
@@ -8,6 +8,9 @@ Changes
 * In Interest, changed the MustBeFresh default value to false.
 * In Face, also check for a Unix socket at /var/tmp/nfd.sock .
 * In examples and unit tests, use the default Face which doesn't require TCP.
+
+Bug fixes
+* In expressInterest, use the nonce in the Interest if provided.
 
 NDN-CPP v0.17 (2019-10-04)
 --------------------------
