CHANGELOG: Remove obsolete Name-based Access Control v1.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Interim changes since NDN-CPP v0.17 (2020-01-09)
+Interim changes since NDN-CPP v0.17 (2020-01-14)
 ------------------------------------------------
 
 Changes
@@ -11,6 +11,7 @@ Changes
 * In Interest, changed the MustBeFresh default value to false.
 * Added Tlv0_3WireFormat.
 * In Face, also check for a Unix socket at /var/tmp/nfd.sock .
+* Remove obsolete Name-based Access Control v1. (Keep v2.)
 * In examples and unit tests, use the default Face which doesn't require TCP.
 
 Bug fixes
