--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@ Changes
 * In Interest, changed the MustBeFresh default value to false.
 * Added Tlv0_3WireFormat.
 * In Face, also check for a Unix socket at /var/tmp/nfd.sock .
+* In KeyChain, remove obsolete security v1 API. https://github.com/operantnetworks/ndn-ind/issues/1
 * Remove obsolete Name-based Access Control v1. (Keep v2.)
 * In examples and unit tests, use the default Face which doesn't require TCP.
 
